--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- meta tags -->
@@ -52,22 +53,23 @@
                     </div>
 
                     <div class="card-text">
-                        <form>
+                        <form method="GET" action="" id="form">
                             <div class="form-group">
-                                <label for="username">Users name or Email</label>
-                                <input type="text" id="username">
+                                <label for="username">Users Email</label>
+                                <input type="email" id="username" title="xyz@example.com" required>
                             </div>
-
+                            
                             <div class="form-group">
                                 <label for="password">Password</label>
-                                <input type="password" id="password">
+                                <input type="password" id="password" required title="Password must contain minimum of 3 and maximum 6 letters" placeholder="******">
                             </div>
-
+                            <!-- I tried using pattern attribute to validate the email and password input but it was not working. Had to resort to using JavaScript to validate the user input. -->
                             <div class="form-group">
+                                <label id="error"></label>
                                 <label class="forgotpassword">Forgot password?</label>
                             </div>
 
-                            <button type="submit" class="btn btn-secondary">Sign In</button>
+                            <button type="submit" class="btn btn-secondary" id="submit" onclick="validateForm(); return false;">Sign In</button>
                         </form>
 
                         <div class="card-footer text-center">
@@ -86,6 +88,7 @@
         </div>
     </section>
 
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
