--- a/lndex.html
+++ b/lndex.html
@@ -87,6 +87,7 @@
             </div>
         </div>
     </section>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
